lab1/Test/L1-A-12-4.output
Error Type B at Line 1
Error Type B at Line 7
Error Type A at Line 21
Error Type B at Line 24
Error Type B at Line 48
