lab1/Test/L1-A-12-4.cmm
struct bg023DXIFjS IuIvsIIQYBq8xZW ( int [ 1808480916 
  ] ) {
  return kgS0P_Wug_DFJqGks = Jfalpzp && g1yDZW5C2Xv1S 
    < EES0xGl0P ( DxvgfYULL_9__318gI2 , MURbG7dNTqMA0 
    || _k7UpCAO22 + ! NrHBmS5GwlLo3Yf2U [ Lz2kTZRvt0o 
    = qsdEvzH6cptATa8IeBR = TZwfxdOOVxAESJ0fF || r7H3VeiYDK 
    && i5 > + BOJXCcRmftKCc4C * ! ( GjZEBEZxmdyv = DPiFnJxQBWnvn8az17 
    || kN >= QX7d6iKBSJrGp19p_ - ( _cHJE5HVUvXDRO4Wd || 
    rw8LRqsL3j <= - _Ad9HEPTgkxhQZzRjFv [ kHrY1tRm = RsMsmmucNXpraB1hc 
    = sBodu_QJQyvuQv7w_zHv != A2q [ TVNT4xtmUArmGJHM5 
    && o_mwnhvOciNlDd == WiMxuGtZfNJ38dN ] . AzO4R8UMg0sMsPjX 
    ] ) * 96506274 ) - - fSlf . Oqg06l3FI48YAin ] / EDLJqfqx7U 
    ( ) * ! - 1399665638.311301306 ) ;
}
float FoOwI84jKmKvHauIV , mmORDi 

;
struct sxhUivPw9lyvIe7KqYjx {
  struct QNcn2MhEUNFyncHd jh ;
  struct w41lMLBQXqsfcRiV7 KAqdDCdlh = tdfHpB4iyDn 
    , xQ74YCBuT9 ^;
};
int 
struct {
};
int ;
int ;
int C1R3aQmDAKZq69W00l ( ) {
}
int WkbDQ278XcZ_59n ( int Qf5lxCdEumn6PEGN5 , int 
  THRw3 ) {
  if ( X8jGlN )   if ( rNvY5y ) {
    fA8340hWNarlXXN6k7 ;
    if ( TEGQw9PmR )     WC ;
else     if ( oGWdtC3s )     ibtT_8lSeJZaSh ;


    while ( BpKMgf )     while ( gY )     while ( 
      b4 )     xLFXMyXUTtclT2ufWMS ;



  }else   while ( XgH4Zp4OwenOHCArbo )   xFGjRos_vWarhZk8 
    



}
